# databricks_kimball_framework

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CI_SETUP.md  COMPARISON.md  Dockerfile  KNOWN_LIMITATIONS.md  LOCAL_SETUP.md  QUICK_START.md  README.md  USAGE.md  calc_cognitive.py  databricks.yml  docker-compose.yml  kimball.targets.yml  pyproject.toml  radon_compare.py  radon_main.json  radon_worktree.json  requirements.txt  run_golden.py  run_tests.py  test_spark.py  validate_fixes.py
.github/: dependabot.yml
.github/workflows/: benchmark-history.yml  benchmarks.yml  ci.yml  contracts.yml  integration.yml  release.yml  security.yml
benchmarks/results/: benchmark_polars.json
contracts/customer-contract/: 1.0.0.odcs.yaml
dbt_kimball/: README.md  dbt_project.yml  profiles.yml.example
dbt_kimball/examples/: dbt_Kimball_Demo.py
dbt_kimball/macros/: kimball_audit_columns.sql
dbt_kimball/snapshots/: dim_customer.sql
docs/: ARCHITECTURE.md  BENCHMARKING.md  CONFIGURATION.md  DATA_CONTRACTS.md  GETTING_STARTED.md  LIQUID_CLUSTERING.md  LITERATURE.md  PARALLEL_EXECUTION.md  PERFORMANCE.md  PRODUCTION_READINESS.md  SCD7_KEYS_AND_NULLS.md  SDK_EXPANSION_IDEAS.md  SQL_PATTERNS.md  STREAMING.md
examples/: Kimball_Demo.py  Kimball_Streaming_Demo.py
examples/configs/: dim_customer.yml  dim_customer_scd6.yml  dim_employee_scd2_identity.yml  dim_product.yml  dim_product_scd4.yml  fact_inventory_periodic.yml  fact_order_lifecycle_accumulating.yml  fact_orders_role_playing.yml  fact_sales.yml
examples/sql_patterns/: accumulating_snapshot_order.sql  junk_dimension.sql  periodic_snapshot_inventory.sql
history/2026-07/: pruning_adaptive_tiny_1fab739.json  pruning_baseline_tiny_1fab739.json  scd1_baseline_tiny_1fab739.json  scd2_change_detection_tiny_1fab739.json  scd2_full_cdc_delete_tiny_1fab739.json  validation_approximate_tiny_1fab739.json  validation_combined_tiny_1fab739.json  validation_full_tiny_1fab739.json  validation_overhead_tiny_1fab739.json  validation_state_aware_tiny_1fab739.json
implementations/dbt/: README.md  dbt_project.yml
implementations/polars/: README.md  pyproject.toml
implementations/polars/examples/: Kimball_Demo.py
implementations/polars/src/kimball_polars/: __init__.py  cdf.py  facts.py  scd.py  watermark.py
implementations/pyspark/: KNOWN_LIMITATIONS.md  LICENSE  coverage.json  pyproject.toml
implementations/pyspark/examples/: Error_Handling_Demo.py  Kimball_Demo.py  Kimball_Demo_Complete.py  Recovery_Demo.py
implementations/pyspark/examples/configs/: dim_customer.yml  dim_employee_scd2_identity.yml
implementations/pyspark/examples/data/day1/: order_items.csv
implementations/pyspark/examples/data/day2/: employees.csv  products.csv
implementations/pyspark/src/kimball/: __init__.py  bus_matrix.py  compiler.py  config.py  dev_utils.py  docs.py  executor.py  key_generator.py  loader.py  merger.py  models.py  orchestrator.py  resilience.py  validation.py  view_refresher.py  watermark.py  workflow_generator.py
implementations/pyspark/src/kimball/common/: config.py  constants.py  exceptions.py
implementations/pyspark/src/kimball/observability/: bus_matrix.py  resilience.py
implementations/pyspark/src/kimball/orchestration/: executor.py  orchestrator.py  transaction.py  watermark.py
implementations/pyspark/src/kimball/processing/: __init__.py  hashing.py  key_generator.py  late_arriving_dimension.py  loader.py  merger.py  skeleton_generator.py  table_creator.py
implementations/pyspark/tests/: conftest.py
implementations/pyspark/tests/integration/: test_schema_evolution.py
implementations/pyspark/tests/unit/: test_compiler.py  test_config.py  test_hashing.py  test_loader.py  test_merger.py  test_models.py  test_orchestrator.py  test_skeleton_generator.py  test_validation.py  test_view_refresher.py  test_watermark.py  test_workflow_generator.py
scripts/: validate_fixes.py
src/kimball/: __init__.py  bus_matrix.py  cli.py  config.py  errors.py  executor.py  hashing.py  key_generator.py  loader.py  merger.py  orchestrator.py  skeleton_generator.py  table_creator.py  validation.py  watermark.py
tests/: conftest.py
tests/benchmarks/: conftest.py  test_adaptive_pruning.py  test_benchmark_scd.py  test_framework_benchmarks.py  test_scd2_single_pass.py  test_validation_optimizations.py
tests/golden/: _dim_customer.yml  _dim_product.yml  _fact_events.yml  _fact_sales.yml  _test_dim_customer.yml  _test_dim_product.yml  _test_fact_sales.yml  dim_customer.yml  dim_product.yml  fact_events.yml  fact_sales.yml  test_golden.py
tests/integration/: test_contract_observability.py  test_early_arrival_observability.py  test_identity_bridge.py  test_junk_dimension_and_descriptions.py  test_nyc_taxi.py  test_olist.py  test_online_retail.py  test_pii_tokenization.py  test_resolution_validation.py  test_scd2_single_pass_regression.py  test_scd7_key_broker.py  test_scd_integration.py  test_schema_evolution.py  test_skeleton_generation.py  test_streaming_cdf.py  test_synthea.py  test_temporal_contract_state.py
tests/unit/: conftest.py  test_benchmark_infrastructure.py  test_bug_report.py  test_bug_report_round2.py  test_bug_report_round3.py  test_bugs.py  test_bus_matrix.py  test_cli.py  test_config.py  test_contract_gate.py  test_contract_registry.py  test_contract_validation_plan.py  test_contracts.py  test_databricks_runner.py  test_defaults.py  test_description_manager.py  test_dimension_nulls.py  test_dispatcher.py  test_examples.py  test_executor.py  test_executor_dag.py  test_fact_contracts.py  test_fact_model_runtime_contract.py  test_fingerprint.py  test_hashing.py  test_identity_map.py  test_key_broker.py  test_key_generator.py  test_key_integrity.py  test_late_arriving_dimension.py  test_loader.py  test_merge_executor.py  test_merge_helpers.py  test_merger.py  test_pii.py  (+28 more)
tools/: benchmark_analyzer.py  benchmark_data.py  benchmark_metrics.py  benchmark_runner.py  check_contract_changes.py  cleanup_databricks.py  compare_pruning.py  compare_validation.py  run_contract_monitor.py  run_databricks_tests.py  run_tests.py
(+159 files in other folders)
